--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://miss-allyssaJ.github.io/react-todo-list"
+  "homepage": "."
 }
